objects/Order_Event__c.object
<CustomObject><fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Captures the Cancellation Date from the Order record for passing to Netsuite.</description>
        <formula>Order__r.Cancellation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Cancellation Date from the Order record for passing to Netsuite.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Integration_Error_Message__c</fullName>
        <description>If there is an error creating a record through Integration with Netsuite, the error message will appear here.</description>
        <inlineHelpText>If there is an error creating a record through Integration with Netsuite, the error message will appear here.</inlineHelpText>
        <label>Integration Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Integration_Record_ID__c</fullName>
        <description>Captures the ID of the record created in Netsuite for this Order Event.</description>
        <inlineHelpText>Captures the ID of the record created in Netsuite for this Order Event.</inlineHelpText>
        <label>Integration Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>IsSuperOrderPaymentCapturedinNetsuite__c</fullName>
        <description>Captures the SuperOrder field value for "Payment Captured in Netsuite". Used in Boomi integration to Netsuite.</description>
        <formula>SuperOrder__r.Payment_Captured_in_Netsuite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the SuperOrder field value for "Payment Captured in Netsuite". Used in Boomi integration to Netsuite.</inlineHelpText>
        <label>SuperOrder Payment Captured in Netsuite</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Ready_For_ERP_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will be picked up by Boomi and will send data to Netsuite.</description>
        <inlineHelpText>When checked, this record will be picked up by Boomi and will send data to Netsuite.</inlineHelpText>
        <label>Is Ready for ERP Integration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Order_Event_Counter__c</fullName>
        <description>Returns a 1 on each Order Event record, useful in reporting.</description>
        <formula>IF(LEN( Name )&gt;0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns a 1 on each Order Event record, useful in reporting.</inlineHelpText>
        <label>Order Event Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Order_Event_Item_Count__c</fullName>
        <description>Tallies the number of connected Order Event Item records.</description>
        <inlineHelpText>Tallies the number of connected Order Event Item records.</inlineHelpText>
        <label>Order Event Item Count</label>
        <summaryForeignKey>Order_Event_Item__c.Order_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Order_Status_for_ERP_Integration__c</fullName>
        <description>Captures the Kit Order Product ERP Status field value for transmission to Boomi/Netsuite. This field determines which scripts are run in Netsuite.</description>
        <formula>Order__r.Kit_Order_Product_ERP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Kit Order Product ERP Status field value for transmission to Boomi/Netsuite.</inlineHelpText>
        <label>Order Status for ERP Integration</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <description>The Order record is a Master record and is required for each Order Event record.</description>
        <inlineHelpText>The Order record is a Master record and is required for each Order Event record.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Events</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Payment_System_Customer_ID__c</fullName>
        <description>Captures the Stripe Customer ID from the Super Order record for processing a refund, as needed.</description>
        <formula>SuperOrder__r.Stripe_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Stripe Customer ID from the Super Order record for processing a refund.</inlineHelpText>
        <label>Payment System Customer ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_System_Transaction_ID__c</fullName>
        <description>Captures the Transaction ID from the payment system for this Refund.</description>
        <inlineHelpText>Captures the Transaction ID from the payment system for this Refund.</inlineHelpText>
        <label>Payment System Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_System_Transaction_Status__c</fullName>
        <description>Captures the status of the Stripe refund request.</description>
        <inlineHelpText>Captures the status of the Stripe refund request.</inlineHelpText>
        <label>Payment System Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Refund_Amount_Requested__c</fullName>
        <description>The Amount of the submitted Refund request.</description>
        <inlineHelpText>The Amount of the submitted Refund request.</inlineHelpText>
        <label>Refund Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Refund_Type__c</fullName>
        <description>User selected field for the type of Refund to process - "Already Shipped" would exclude $25 + cost of shipping from the refund, while Full is a refund of all Order Products.</description>
        <inlineHelpText>User selected field for the type of Refund to process - "Already Shipped" would exclude $25 + cost of shipping from the refund, while Full is a refund of all Order Products.</inlineHelpText>
        <label>Refund Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already Shipped</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sales_Order_ID__c</fullName>
        <description>Captures the Netsuite Sales Order ID field from the Order record.</description>
        <formula>Order__r.Netsuite_Sales_Order_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Netsuite Sales Order ID field from the Order record.</inlineHelpText>
        <label>Sales Order ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SuperOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to SuperOrder record, required to make Declarative Rollup Summary feature work properly.</description>
        <label>SuperOrder</label>
        <referenceTo>SuperOrder__c</referenceTo>
        <relationshipLabel>Order Events</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Total_Refund_Amount__c</fullName>
        <description>Tallies the amounts entered on any Order Event Item records.</description>
        <inlineHelpText>Tallies the amounts entered on any Order Event Item records.</inlineHelpText>
        <label>Total Refund Amount</label>
        <summarizedField>Order_Event_Item__c.Refund_Amount__c</summarizedField>
        <summaryForeignKey>Order_Event_Item__c.Order_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>The Type field tells Netsuite what to do when an Order Event record is created. Each of the types will complete different tasks in Netsuite.</description>
        <inlineHelpText>The Type field tells Netsuite what to do when an Order Event record is created. Each of the types will complete different tasks in Netsuite.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Placement</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Cancel &amp; Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>The Order Event object is used to capture events that happen to an Order, like Refund and Cancellation requests. This record is an integration point for the ERP system and there is a corresponding Netsuite object called Order Event that can be created when entered into Salesforce.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Order Event</label><nameField>
        <displayFormat>OE-{000000}</displayFormat>
        <label>Order Event</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Order Events</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><visibility>Public</visibility></CustomObject>